(OK) correction **buffer overflow** sur astre->infos

--- a/TODO
+++ b/TODO
@@ -68,6 +68,8 @@ identifications des points a travailler / ameliorer / effectuer / analyser ..
   => modifier les droits du user stef et astrokit pour avec 
      sudo setcap 'cap_sys_nice=eip' <application>
      pour pouvoir executer les primitives pthread_setschedparam (param.sched_priority)
+     
+   => verifier a quel moment on doit faire un CAT_FIND
   
   
   
